# matmul

./: CMakeLists.txt  main.cpp  matrix.cpp  matrix.cu  matrix.h  timer.cpp  timer.h
